--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     </head>
 
   <body>
-<img src="https://avatars.githubusercontent.com/u/38488260?v=4">
-
+      <h1bekalshenoy</h1>
+      <img src="https://avatars.githubusercontent.com/u/38488260?v=4">
+      <ul>
+          <li>This</li>
+          <li>Is an</li>
+          <li>Unordered list</li>
+      </ul>
   </body>
 
 </html>
