--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <body>
       <h1bekalshenoy</h1>
-      <img src="https://avatars.githubusercontent.com/u/38488260?v=4">
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
       <ul>
           <li>This</li>
           <li>Is an</li>
